Fixed menu alignement

--- a/css/menu.css
+++ b/css/menu.css
@@ -14,6 +14,7 @@
 	display:flex;
 	flex-flow:column;
 	flex-grow:1;
+	width:50vw;
 }
 
 .menuContainer{
